# zserio-cpp11-safe

./: CMakeLists.txt  README.md  build.xml  build_and_test.bash
.github/workflows/: ci.yml
cmake/: BuildExtension.cmake  ZserioCpp11SafeConfig.cmake.in  ZserioGenerator.cmake  zserio-cpp11-safe-config.cmake.in
doc/: DESIGN.md
runtime/: CMakeLists.txt
runtime/src/: CMakeLists.txt
runtime/src/zserio/: AnyHolder.h  Array.h  ArrayTraits.h  BitBuffer.h  BitFieldUtil.cpp  BitFieldUtil.h  BitSizeOfCalculator.cpp  BitSizeOfCalculator.h  BitStreamReader.cpp  BitStreamReader.h  BitStreamWriter.cpp  BitStreamWriter.h  CppRuntimeVersion.h  DeltaContext.h  Enums.h  ErrorCode.h  FileUtil.cpp  FileUtil.h  IPubsub.h  IService.h  OptionalHolder.h  ParsingInfo.h  Result.h  SerializeUtil.h  SizeConvertUtil.cpp  SizeConvertUtil.h  SqliteConnection.h  StringView.h  UniquePtr.h  ValidationSqliteUtil.h
runtime/src/zserio/pmr/: IService.h
runtime/src/zserio/unsafe/: ConstraintException.h  CppRuntimeException.cpp  DebugStringUtil.h  ITypeInfo.h  IWalkFilter.h  IWalkObserver.h  JsonDecoder.h  JsonEncoder.cpp  JsonEncoder.h  JsonParser.h  JsonReader.h  JsonTokenizer.cpp  JsonTokenizer.h  JsonWriter.h  PubsubException.h  Reflectable.h  ReflectableUtil.h  ServiceException.h  SqliteException.h  TypeInfo.h  TypeInfoUtil.cpp  TypeInfoUtil.h  Walker.h  ZserioTreeCreator.cpp  ZserioTreeCreator.h
runtime/src/zserio/unsafe/pmr/: IReflectable.h  ITypeInfo.h  Reflectable.h
src/zserio/extension/cpp/: CppDefaultEmitter.java  CppExtension.java  CppExtensionParameters.java  CppExtensionVersion.java  TemplateDataContext.java
test/: CMakeLists.txt  build_all.sh  check_environment.sh
test/mini/: CMakeLists.txt  build.sh
test/mini/app/: CMakeLists.txt  CountingMemoryResource.h  MiniTest.cpp  MiniTest.h  main.cpp
test/mini/schema/: minizs.zs
